# study_rust

ITP1/ITP1_1_A/: Cargo.toml
ITP1/itp1_1_B/: Cargo.toml
ITP1/itp1_1_B/src/: main.rs
ITP1/itp1_1_c/: Cargo.toml
ITP1/itp1_1_c/src/: main.rs
ITP1/itp1_1_d/: Cargo.toml
ITP1/itp1_1_d/src/: main.rs
ITP1/itp1_2_a/: Cargo.toml
ITP1/itp1_2_a/src/: main.rs
ITP1/itp1_2_b/: Cargo.toml
ITP1/itp1_2_b/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello/: Cargo.toml
minigrep/: Cargo.toml  poem.txt
minigrep/src/: lib.rs  main.rs
opengl_app/: Cargo.toml
opengl_app/src/: main.rs  shader.rs  vertex.rs
opengl_app/src/shader/: shader.fs
tutorial/slice/: Cargo.toml
tutorial/slice/src/: main.rs
